Updated S3AFS implementation to disable chunked encoding while uploading(aws-sdk version 1.10.77)

--- a/hadoop-tools/hadoop-aws/pom.xml
+++ b/hadoop-tools/hadoop-aws/pom.xml
@@ -317,6 +317,7 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-s3</artifactId>
+      <version>1.10.77</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -338,6 +339,7 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-sts</artifactId>
+      <version>1.10.77</version>
       <scope>test</scope>
     </dependency>
     <dependency>
